fixed gap

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main {
 }
 
 .card__location {
-  margin-top: -1.5rem;
+  margin-top: -1.25rem;
   color: var(--clr-accent-green);
   font-size: 0.875rem;
   font-weight: var(--fw-bold);
